zmieniony connection string

--- a/OOP_SQL.ipynb
+++ b/OOP_SQL.ipynb
@@ -92,7 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "# 127.0.0.1 = localhost\n",
+    "conn = psycopg2.connect(\"host=127.0.0.1 port=5432 dbname=postgres user=postgres password=postgres\")\n",
+    "cur = conn.cursor()\n",
+    "\n",
+    "cur.execute(\"SELECT * FROM user\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,33 +116,93 @@
        "[('postgres',)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import psycopg2\n",
-    "\n",
-    "conn = psycopg2.connect(\"host=127.0.0.1 port=5432 dbname=postgres user=postgres password=postgres\")\n",
-    "cur = conn.cursor()\n",
-    "\n",
-    "cur.execute(\"SELECT * FROM user\")\n",
     "cur.fetchall()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"CREATE TABLE test (id serial PRIMARY KEY, num integer, data varchar);\")"
+    "cur.execute(\"CREATE TABLE test23 (id serial PRIMARY KEY, num integer, data varchar);\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "table \"test23\" does not exist\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-b5482dbfbb5c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcur\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"DROP TABLE test23;\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mProgrammingError\u001b[0m: table \"test23\" does not exist\n"
+     ]
+    }
+   ],
+   "source": [
+    "cur.execute(\"DROP TABLE test23;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"CREATE TABLE test28 (id serial PRIMARY KEY, num integer, data varchar);\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"CREATE TABLE test25 (id serial PRIMARY KEY, num integer, data varchar);\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"DROP TABLE test24;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"CREATE TABLE test30 (id serial PRIMARY KEY, num integer, data varchar);\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.rollback()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,32 +211,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cur.execute(\"INSERT INTO test(num, data) values(1, 'test data');\")"
+    "cur.execute(\"INSERT INTO test33(num, data) values(523, 'test data');\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cur.execute(\"SELECT * FROM test33\")\n",
+    "z = cur.fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "int"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cur.execute(\"SELECT * FROM test\")\n",
-    "cur.fetchall()"
+    "type(z[0][0])"
    ]
   },
   {
@@ -197,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sqlalchemy import create_engine\n",
     "#engine = create_engine('postgresql+psycopg2://postgres:postgres@localhost/postgres')\n",
     "\n",
-    "engine_memory = create_engine('sqlite:///:memory:', echo=False)\n",
+    "#engine_memory = create_engine('sqlite:///:memory:', echo=False)\n",
     "\n",
-    "#engine_file = create_engine('sqlite:///test.sqlite', echo=True)\n",
+    "engine_file = create_engine('sqlite:///test.sqlite', echo=True)\n",
     "#you can check the file !strings test.sqlite"
    ]
   },
@@ -238,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,21 +343,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Important declaration\n",
     "\n",
     "Base = declarative_base()\n",
-    "Session = sessionmaker(bind=engine_memory)\n",
+    "Session = sessionmaker(bind=engine_file)\n",
     "\n",
     "session = Session()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,12 +380,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-10-28 14:35:48,658 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-10-28 14:35:48,665 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-10-28 14:35:48,669 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2018-10-28 14:35:48,680 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2018-10-28 14:35:48,690 INFO sqlalchemy.engine.base.Engine PRAGMA table_info(\"cars\")\n",
+      "2018-10-28 14:35:48,692 INFO sqlalchemy.engine.base.Engine ()\n"
+     ]
+    }
+   ],
    "source": [
     "# creates everything what was launched to create\n",
-    "Base.metadata.create_all(engine_memory)"
+    "Base.metadata.create_all(engine_file)"
    ]
   },
   {
